CRIAÇÃO DO SCRIPT DE CALIBRAGEM

--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "44118fba",
    "metadata": {},
    "outputs": [],
    "source": [
     "from path_arquivos import *\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import glob\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "9950b5ab",
+   "execution_count": 24,
+   "id": "a0f6cf24",
    "metadata": {},
    "outputs": [
     {
@@ -23,164 +25,74 @@
      "output_type": "stream",
      "text": [
       "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n",
+      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
       "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
      ]
     }
    ],
    "source": [
-    "col_totvs = ['DATA', 'CONFERENCIA', 'PRODUTO','VALIDADE', 'PROBLEMA']\n",
-    "totvs = pd.read_excel(totvs.shelf_life, header= 4, usecols=col_totvs,engine= 'xlrd')\n",
+    "def directory(files, argumento):\n",
+    "    directory = glob.glob(os.path.join(files, argumento))\n",
+    "    lista = []\n",
+    "    for arquivo in directory:\n",
+    "        x = pd.read_csv(arquivo, header= None)\n",
+    "        lista.append(x)\n",
+    "    df_temp = pd.concat(lista, axis= 0, ignore_index= True)\n",
+    "    return df_temp\n",
     "\n",
-    "col_bonus = ['NUMBONUS', 'CODPROD', 'CODENDERECO', 'DTVALIDADE']\n",
-    "bonus = pd.read_excel(ar_xlsx.ar_64, usecols= col_bonus)"
+    "df_sug = directory(pasta.p_82, 'DEP*.txt')\n",
+    "df_mov = directory(pasta.p_82, 'MOV*.txt')\n",
+    "df_prod = pd.read_excel(ar_xlsx.ar_96, usecols=['CODPROD','DESCRICAO', 'QTUNITCX', 'QTTOTPAL', 'OBS2','RUA', 'PREDIO', 'APTO'])\n",
+    "df_acesso = pd.read_excel(ar_xlsx.ar_60, usecols= ['CODPROD','QTOS', 'QT'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "f6499e84",
+   "execution_count": null,
+   "id": "a3247728",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df_sug.columns = col_name.c82\n",
+    "df_mov.columns = col_name.cMovi\n",
+    "\n",
+    "df_prod = df_prod.loc[df_prod['RUA'].between(1,39)]\n",
+    "df_prod['OBS2'] = df_prod['OBS2'].fillna(\"Ativos\")\n",
+    "df_prod[\"PRODUTO\"] = df_prod['CODPROD'].astype(str)\n",
+    "\n",
+    "x = df_acesso.groupby('CODPROD').agg(\n",
+    "ACESSO = (\"QTOS\", \"sum\")\n",
+    ").reset_index()\n",
+    "\n",
+    "df = df_sug.merge(df_prod, left_on= 'COD', right_on= 'CODPROD', how= 'left')\n",
+    "df = df.merge(x, left_on='COD', right_on='CODPROD', how= 'left')\n",
+    "df = df.merge(df_mov, left_on='COD', right_on='COD', how=\"left\")\n",
+    "\n",
+    "df[['COM FATOR', 'QTTOTPAL', 'CAP']] = df[['COM FATOR', 'QTTOTPAL','CAP']].fillna(0)\n",
+    "df['PL_SUG'] = df['COM FATOR'].astype(int) / df['QTTOTPAL'].astype(int)\n",
+    "df['PL_CAP'] = df['CAP'].astype(int) / df['QTTOTPAL'].astype(int)\n",
+    "df['CONTAGEM'] = \n",
+    "drop_col = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8c758f90",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['DATA', 'CONFERENCIA', 'PRODUTO', 'VALIDADE', 'PROBLEMA', 'COD', 'DESC',\n",
-       "       'ID_VAR'],\n",
+       "Index(['COD', 'DESCRIÇÃO', 'EMBALAGEM_x', 'UNID.', 'DEP', 'RUA_x', 'PREDIO_x',\n",
+       "       'NIVEL', 'APTO_x', 'MÊS 1', 'MÊS 2', 'MÊS 3', 'TIPO', 'CAP', '1 DIA',\n",
+       "       'COM FATOR', 'VARIAÇÃO', '%_x', 'CODPROD_x', 'DESCRICAO', 'OBS2',\n",
+       "       'QTUNITCX', 'QTTOTPAL', 'RUA_y', 'PREDIO_y', 'APTO_y', 'PRODUTO',\n",
+       "       'CODPROD_y', 'ACESSO', 'DESC', 'EMBALAGEM_y', 'UNID', 'MOVI', '%_y',\n",
+       "       '%_ACUM', 'CLASSE', 'PL_SUG', 'PL_CAP'],\n",
        "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DATA                   object\n",
-       "CONFERENCIA            object\n",
-       "PRODUTO                object\n",
-       "VALIDADE       datetime64[ns]\n",
-       "PROBLEMA               object\n",
-       "COD                     int64\n",
-       "DESC                   object\n",
-       "ID_VAR                 object\n",
-       "dtype: object"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DATA</th>\n",
-       "      <th>CONFERENCIA</th>\n",
-       "      <th>PRODUTO</th>\n",
-       "      <th>VALIDADE</th>\n",
-       "      <th>PROBLEMA</th>\n",
-       "      <th>COD</th>\n",
-       "      <th>DESC</th>\n",
-       "      <th>ID_VAR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>03/09/2025</td>\n",
-       "      <td>285597</td>\n",
-       "      <td>465370 - MARGARINA CREMOSY BD 50% LIP 14,5K</td>\n",
-       "      <td>2026-05-05</td>\n",
-       "      <td>SHELF-LIFE ACIMA DO PRAZO DE VALIDADE</td>\n",
-       "      <td>465370</td>\n",
-       "      <td>MARGARINA CREMOSY BD 50% LIP 14,5K</td>\n",
-       "      <td>285597-465370-2026-05-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>03/09/2025</td>\n",
-       "      <td>285598</td>\n",
-       "      <td>442902 - DES REXONA AERO 90G/150M MASC INVISIBL</td>\n",
-       "      <td>2028-08-21</td>\n",
-       "      <td>SHELF-LIFE ACIMA DO PRAZO DE VALIDADE</td>\n",
-       "      <td>442902</td>\n",
-       "      <td>DES REXONA AERO 90G/150M MASC INVISIBL</td>\n",
-       "      <td>285598-442902-2028-08-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>03/09/2025</td>\n",
-       "      <td>285598</td>\n",
-       "      <td>475059 - DES DOVE AERO 87GR FEM PESSEGO LEITE</td>\n",
-       "      <td>2028-08-01</td>\n",
-       "      <td>SHELF-LIFE ACIMA DO PRAZO DE VALIDADE</td>\n",
-       "      <td>475059</td>\n",
-       "      <td>DES DOVE AERO 87GR FEM PESSEGO LEITE</td>\n",
-       "      <td>285598-475059-2028-08-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>03/09/2025</td>\n",
-       "      <td>285599</td>\n",
-       "      <td>458223 - BISC MARIL TEENS 80GR BAUNY</td>\n",
-       "      <td>2026-03-04</td>\n",
-       "      <td>SHELF-LIFE ABAIXO DO PERCENTUAL DE TOLER NCIA</td>\n",
-       "      <td>458223</td>\n",
-       "      <td>BISC MARIL TEENS 80GR BAUNY</td>\n",
-       "      <td>285599-458223-2026-03-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>03/09/2025</td>\n",
-       "      <td>285599</td>\n",
-       "      <td>458224 - BISC MARIL TEENS 80GR CHOCOLATE</td>\n",
-       "      <td>2026-06-09</td>\n",
-       "      <td>SHELF-LIFE ACIMA DO PRAZO DE VALIDADE</td>\n",
-       "      <td>458224</td>\n",
-       "      <td>BISC MARIL TEENS 80GR CHOCOLATE</td>\n",
-       "      <td>285599-458224-2026-06-09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         DATA CONFERENCIA                                          PRODUTO  \\\n",
-       "0  03/09/2025      285597      465370 - MARGARINA CREMOSY BD 50% LIP 14,5K   \n",
-       "1  03/09/2025      285598  442902 - DES REXONA AERO 90G/150M MASC INVISIBL   \n",
-       "2  03/09/2025      285598    475059 - DES DOVE AERO 87GR FEM PESSEGO LEITE   \n",
-       "3  03/09/2025      285599             458223 - BISC MARIL TEENS 80GR BAUNY   \n",
-       "4  03/09/2025      285599         458224 - BISC MARIL TEENS 80GR CHOCOLATE   \n",
-       "\n",
-       "    VALIDADE                                       PROBLEMA     COD  \\\n",
-       "0 2026-05-05          SHELF-LIFE ACIMA DO PRAZO DE VALIDADE  465370   \n",
-       "1 2028-08-21          SHELF-LIFE ACIMA DO PRAZO DE VALIDADE  442902   \n",
-       "2 2028-08-01          SHELF-LIFE ACIMA DO PRAZO DE VALIDADE  475059   \n",
-       "3 2026-03-04  SHELF-LIFE ABAIXO DO PERCENTUAL DE TOLER NCIA  458223   \n",
-       "4 2026-06-09          SHELF-LIFE ACIMA DO PRAZO DE VALIDADE  458224   \n",
-       "\n",
-       "                                      DESC                    ID_VAR  \n",
-       "0       MARGARINA CREMOSY BD 50% LIP 14,5K  285597-465370-2026-05-05  \n",
-       "1   DES REXONA AERO 90G/150M MASC INVISIBL  285598-442902-2028-08-21  \n",
-       "2     DES DOVE AERO 87GR FEM PESSEGO LEITE  285598-475059-2028-08-01  \n",
-       "3              BISC MARIL TEENS 80GR BAUNY  285599-458223-2026-03-04  \n",
-       "4          BISC MARIL TEENS 80GR CHOCOLATE  285599-458224-2026-06-09  "
       ]
      },
      "metadata": {},
@@ -188,18 +100,7 @@
     }
    ],
    "source": [
-    "totvs['COD'] = (totvs['PRODUTO'].str.split(\"-\").str[0]).astype(int)\n",
-    "totvs['DESC'] = (totvs['PRODUTO'].str.split(\"-\").str[1])\n",
-    "totvs['CONFERENCIA'] = totvs['CONFERENCIA'].astype(str)\n",
-    "totvs['CONFERENCIA'] = totvs['CONFERENCIA'].str.replace(\".\", \"\")\n",
-    "totvs['VALIDADE'] = pd.to_datetime(totvs['VALIDADE'],dayfirst=True)\n",
-    "totvs['ID_VAR'] = totvs['CONFERENCIA'].astype(str) + \"-\" + totvs['COD'].astype(str) + \"-\" + totvs['VALIDADE'].astype(str)\n",
-    "\n",
-    "bonus['ID_VAR'] = bonus['NUMBONUS'].astype(str) + \"-\" + bonus['CODPROD'].astype(str) + \"-\" + bonus['DTVALIDADE'].astype(str)\n",
-    "display(totvs.columns)\n",
-    "display(totvs.dtypes)\n",
-    "display(totvs.head())\n",
-    "\n"
+    "display(df.columns)"
    ]
   }
  ],
