--- a/OUTROS/consulta_corte.ipynb
+++ b/OUTROS/consulta_corte.ipynb
@@ -95,27 +95,62 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>444365</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1875.62</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>SUCO NUTRINECTAR PRONTO 200ML UVA</td>\n",
+       "      <td>525.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>-512.0</td>\n",
+       "      <td>2025-09-09</td>\n",
+       "      <td>Produto na camara-fria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>464141</td>\n",
        "      <td>3</td>\n",
-       "      <td>5224.5</td>\n",
+       "      <td>5224.50</td>\n",
        "      <td>90.0</td>\n",
        "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>317.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>-306.0</td>\n",
+       "      <td>254.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>-242.0</td>\n",
        "      <td>2025-09-10</td>\n",
        "      <td>validade filial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>471762</td>\n",
+       "      <td>3</td>\n",
+       "      <td>729.22</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
+       "      <td>2071.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>-2051.0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE               Descrição   \\\n",
-       "0  464141          3       5224.5        90.0  CREME LEITE TIROL 200GR   \n",
+       "      COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE  \\\n",
+       "0  444365          4      1875.62        53.0   \n",
+       "1  464141          3      5224.50        90.0   \n",
+       "2  471762          3       729.22        22.0   \n",
        "\n",
-       "   Estoque  BLOQUEADO    var       DATA           RETURN  \n",
-       "0    317.0       11.0 -306.0 2025-09-10  validade filial  "
+       "                               Descrição   Estoque  BLOQUEADO     var  \\\n",
+       "0       SUCO NUTRINECTAR PRONTO 200ML UVA    525.0       13.0  -512.0   \n",
+       "1                 CREME LEITE TIROL 200GR    254.0       12.0  -242.0   \n",
+       "2  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   2071.0       20.0 -2051.0   \n",
+       "\n",
+       "        DATA                   RETURN  \n",
+       "0 2025-09-09  Produto na camara-fria   \n",
+       "1 2025-09-10          validade filial  \n",
+       "2        NaT                           "
       ]
      },
      "metadata": {},
@@ -145,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "94e22145",
    "metadata": {},
    "outputs": [
