--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "44118fba",
    "metadata": {},
    "outputs": [],
@@ -11,156 +11,16 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import glob\n",
-    "import os"
+    "import os\n",
+    "caminho = r'c:\\WS_OLIVEIRA\\OUTPUT\\BI_ACESSO\\FATO_GERAL.xlsx'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "a0f6cf24",
+   "execution_count": 3,
+   "id": "623793b7",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
-      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "def directory(files, argumento):\n",
-    "    directory = glob.glob(os.path.join(files, argumento))\n",
-    "    lista = []\n",
-    "    for arquivo in directory:\n",
-    "        x = pd.read_csv(arquivo, header= None)\n",
-    "        lista.append(x)\n",
-    "    df_temp = pd.concat(lista, axis= 0, ignore_index= True)\n",
-    "    return df_temp\n",
-    "\n",
-    "df_sug = directory(pasta.p_82, 'DEP*.txt')\n",
-    "df_mov = directory(pasta.p_82, 'MOV*.txt')\n",
-    "df_prod = pd.read_excel(ar_xlsx.ar_96, usecols=['CODPROD','DESCRICAO', 'QTUNITCX', 'QTTOTPAL', 'OBS2','RUA', 'PREDIO', 'APTO'])\n",
-    "df_acesso = pd.read_excel(ar_xlsx.ar_60, usecols= ['CODPROD','QTOS', 'QT'])\n",
-    "df_estoque = pd.read_excel(ar_xls.ar_86, usecols=['Código', 'Estoque', 'Custo ult. ent.'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "a3247728",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "df_sug.columns = col_name.c82\n",
-    "df_mov.columns = col_name.cMovi\n",
-    "\n",
-    "df_prod = df_prod.loc[df_prod['RUA'].between(1,39)]\n",
-    "df_prod['OBS2'] = df_prod['OBS2'].fillna(\"Ativos\")\n",
-    "df_prod[\"PRODUTO\"] = df_prod['CODPROD'].astype(str)\n",
-    "\n",
-    "df_estoque = df_estoque.fillna(0)\n",
-    "\n",
-    "x = df_acesso.groupby('CODPROD').agg(\n",
-    "ACESSO = (\"QTOS\", \"sum\")\n",
-    ").reset_index()\n",
-    "\n",
-    "df = df_sug.merge(df_prod, left_on= 'COD', right_on= 'CODPROD', how= 'left')\n",
-    "df = df.merge(df_estoque, left_on='COD', right_on='Código', how='left')\n",
-    "df = df.merge(x, left_on='COD', right_on='CODPROD', how= 'left')\n",
-    "df = df.merge(df_mov, left_on='COD', right_on='COD', how=\"left\")\n",
-    "\n",
-    "concat = df['RUA_x'].astype(str) + \"-\" + df['PREDIO_x'].astype(str)\n",
-    "\n",
-    "df[['COM FATOR', 'QTTOTPAL', 'CAP']] = df[['COM FATOR', 'QTTOTPAL','CAP']].fillna(0)\n",
-    "df['PL_SUG'] = (df['COM FATOR'].astype(int) / df['QTTOTPAL'].astype(int)).round(2)\n",
-    "df['PL_CAP'] = (df['CAP'].astype(int) / df['QTTOTPAL'].astype(int)).round(2)\n",
-    "df['Custo ult. ent.'] = df['Custo ult. ent.'].astype(float).round(2)\n",
-    "df['CUSTO_TT'] = (df['Estoque'].astype(float) * df['Custo ult. ent.']).round(2)\n",
-    "df['CONTAGEM'] = concat.map(concat.value_counts())\n",
-    "df['STATUS_PROD'] = np.where(df['CONTAGEM'] > 3, \"DIV\", np.where(df['CONTAGEM'] > 2,\"VAL\", \"INT\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "19d48848",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_col = ['UNID.','DESCRIÇÃO', '%_x',  'CODPROD_x','RUA_y', 'PREDIO_y', 'APTO_y','Código', 'CODPROD_y', 'ACESSO','DESCRICAO','EMBALAGEM_y', 'UNID','%_y', '%_ACUM','NIVEL']\n",
-    "df_final = df.drop(columns=drop_col)\n",
-    "\n",
-    "dic_rename = {\n",
-    "    \"EMBALAGEM_x\" : \"EMB\"\n",
-    "    ,\"RUA_x\" : \"RUA\"\n",
-    "    ,\"PREDIO_x\" : \"PREDIO\"\n",
-    "    ,\"APTO_x\" : \"APTO\"\n",
-    "    ,\"Custo ult. ent.\" : \"CUSTO_ULT\"\n",
-    "}\n",
-    "df_final = df_final.rename(columns=dic_rename)\n",
-    "\n",
-    "nova_ordem = ['COD', 'DESC','EMB', 'OBS2', 'QTUNITCX','QTTOTPAL', 'RUA', 'PREDIO', 'APTO', 'TIPO', 'MÊS 1', 'MÊS 2', 'MÊS 3', 'CAP', '1 DIA', 'COM FATOR', 'VARIAÇÃO','Estoque', 'CUSTO_ULT','MOVI', 'CLASSE', 'PL_SUG', 'PL_CAP', 'CONTAGEM', 'STATUS_PROD', 'CUSTO_TT','PRODUTO']\n",
-    "df_final = df_final[nova_ordem]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "8c758f90",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['COD', 'DESC', 'EMB', 'OBS2', 'QTUNITCX', 'QTTOTPAL', 'RUA', 'PREDIO',\n",
-       "       'APTO', 'TIPO', 'MÊS 1', 'MÊS 2', 'MÊS 3', 'CAP', '1 DIA', 'COM FATOR',\n",
-       "       'VARIAÇÃO', 'Estoque', 'CUSTO_ULT', 'MOVI', 'CLASSE', 'PL_SUG',\n",
-       "       'PL_CAP', 'CONTAGEM', 'STATUS_PROD', 'CUSTO_TT', 'PRODUTO'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "COD              int64\n",
-       "DESC            object\n",
-       "EMB             object\n",
-       "OBS2            object\n",
-       "QTUNITCX         int64\n",
-       "QTTOTPAL         int64\n",
-       "RUA              int64\n",
-       "PREDIO           int64\n",
-       "APTO             int64\n",
-       "TIPO            object\n",
-       "MÊS 1            int64\n",
-       "MÊS 2            int64\n",
-       "MÊS 3            int64\n",
-       "CAP              int64\n",
-       "1 DIA            int64\n",
-       "COM FATOR        int64\n",
-       "VARIAÇÃO         int64\n",
-       "Estoque        float64\n",
-       "CUSTO_ULT      float64\n",
-       "MOVI           float64\n",
-       "CLASSE          object\n",
-       "PL_SUG         float64\n",
-       "PL_CAP         float64\n",
-       "CONTAGEM         int64\n",
-       "STATUS_PROD     object\n",
-       "CUSTO_TT       float64\n",
-       "PRODUTO         object\n",
-       "dtype: object"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -208,123 +68,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>473137</td>\n",
-       "      <td>BALAS REGALIZ FINI 80GR TUBES SORTIDOS</td>\n",
-       "      <td>CX/0012/UN</td>\n",
+       "      <td>440218</td>\n",
+       "      <td>ENERG EXTRA POWER PET 2LT</td>\n",
+       "      <td>PT/0006/UN</td>\n",
        "      <td>Ativos</td>\n",
        "      <td>1</td>\n",
-       "      <td>510</td>\n",
-       "      <td>13</td>\n",
-       "      <td>34</td>\n",
-       "      <td>102</td>\n",
+       "      <td>80</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>101</td>\n",
        "      <td>INTEIRO(1,90)</td>\n",
        "      <td>...</td>\n",
-       "      <td>1525.0</td>\n",
-       "      <td>42.11</td>\n",
-       "      <td>1356.0</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>2</td>\n",
+       "      <td>677</td>\n",
+       "      <td>51.41</td>\n",
+       "      <td>32525</td>\n",
+       "      <td>A</td>\n",
+       "      <td>8.55</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>1</td>\n",
        "      <td>INT</td>\n",
-       "      <td>64217.75</td>\n",
-       "      <td>473137</td>\n",
+       "      <td>34804.57</td>\n",
+       "      <td>440218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>473135</td>\n",
-       "      <td>BALAS GELAT FINI 80GR AROS DE MORANGO</td>\n",
-       "      <td>CX/0012/UN</td>\n",
+       "      <td>466231</td>\n",
+       "      <td>MARGARINA DELICIA 250G CREM 77% LIP</td>\n",
+       "      <td>CX/0024/UN</td>\n",
        "      <td>Ativos</td>\n",
        "      <td>1</td>\n",
-       "      <td>364</td>\n",
-       "      <td>13</td>\n",
-       "      <td>30</td>\n",
+       "      <td>112</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
        "      <td>101</td>\n",
        "      <td>INTEIRO(1,90)</td>\n",
        "      <td>...</td>\n",
-       "      <td>2354.0</td>\n",
-       "      <td>42.11</td>\n",
-       "      <td>3810.0</td>\n",
+       "      <td>3450</td>\n",
+       "      <td>72.44</td>\n",
+       "      <td>24012</td>\n",
        "      <td>A</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>2</td>\n",
+       "      <td>6.32</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>1</td>\n",
        "      <td>INT</td>\n",
-       "      <td>99126.94</td>\n",
-       "      <td>473135</td>\n",
+       "      <td>249918.00</td>\n",
+       "      <td>466231</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>473125</td>\n",
-       "      <td>BALAS GELAT FINI 80GR MINHOCAS CITRICAS</td>\n",
-       "      <td>CX/0012/UN</td>\n",
+       "      <td>470168</td>\n",
+       "      <td>AZEITONA VDE FATIADA RAINHA BALDE 1,8KG</td>\n",
+       "      <td>BD/0001/UN</td>\n",
        "      <td>Ativos</td>\n",
        "      <td>1</td>\n",
-       "      <td>364</td>\n",
-       "      <td>13</td>\n",
-       "      <td>32</td>\n",
-       "      <td>101</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2932.0</td>\n",
-       "      <td>42.11</td>\n",
-       "      <td>3724.0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>2</td>\n",
-       "      <td>INT</td>\n",
-       "      <td>123466.52</td>\n",
-       "      <td>473125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>473149</td>\n",
-       "      <td>MARSHMALLOW FINI 80GR CAMPING</td>\n",
-       "      <td>CX/0012/UN</td>\n",
-       "      <td>Ativos</td>\n",
-       "      <td>1</td>\n",
-       "      <td>126</td>\n",
-       "      <td>13</td>\n",
-       "      <td>36</td>\n",
+       "      <td>150</td>\n",
+       "      <td>9</td>\n",
+       "      <td>26</td>\n",
        "      <td>102</td>\n",
        "      <td>INTEIRO(1,90)</td>\n",
        "      <td>...</td>\n",
-       "      <td>1140.0</td>\n",
-       "      <td>42.11</td>\n",
-       "      <td>1226.0</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>1.11</td>\n",
+       "      <td>3616</td>\n",
+       "      <td>37.06</td>\n",
+       "      <td>18268</td>\n",
+       "      <td>A</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>1.20</td>\n",
        "      <td>2</td>\n",
        "      <td>INT</td>\n",
-       "      <td>48005.40</td>\n",
-       "      <td>473149</td>\n",
+       "      <td>134008.96</td>\n",
+       "      <td>470168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>473680</td>\n",
+       "      <td>SACHET MAIONESE CEPERA 7GR</td>\n",
+       "      <td>CX/0140/UN</td>\n",
+       "      <td>Ativos</td>\n",
+       "      <td>1</td>\n",
+       "      <td>560</td>\n",
+       "      <td>6</td>\n",
+       "      <td>95</td>\n",
+       "      <td>102</td>\n",
+       "      <td>INTEIRO(1,90)</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3031</td>\n",
+       "      <td>15.79</td>\n",
+       "      <td>17265</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>DIV</td>\n",
+       "      <td>47859.49</td>\n",
+       "      <td>473680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>473129</td>\n",
-       "      <td>BALAS GELAT FINI 80GR BEIJOS DE MORANGO</td>\n",
+       "      <td>466230</td>\n",
+       "      <td>MARGARINA DELICIA 500G CREM 77% LIP</td>\n",
        "      <td>CX/0012/UN</td>\n",
        "      <td>Ativos</td>\n",
        "      <td>1</td>\n",
-       "      <td>364</td>\n",
-       "      <td>13</td>\n",
-       "      <td>22</td>\n",
+       "      <td>112</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>101</td>\n",
        "      <td>INTEIRO(1,90)</td>\n",
        "      <td>...</td>\n",
-       "      <td>4895.0</td>\n",
-       "      <td>42.11</td>\n",
-       "      <td>6117.0</td>\n",
+       "      <td>8819</td>\n",
+       "      <td>65.50</td>\n",
+       "      <td>37643</td>\n",
        "      <td>A</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>2</td>\n",
+       "      <td>9.11</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>1</td>\n",
        "      <td>INT</td>\n",
-       "      <td>206128.45</td>\n",
-       "      <td>473129</td>\n",
+       "      <td>577644.50</td>\n",
+       "      <td>466230</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -333,32 +193,32 @@
       ],
       "text/plain": [
        "      COD                                     DESC         EMB    OBS2  \\\n",
-       "0  473137   BALAS REGALIZ FINI 80GR TUBES SORTIDOS  CX/0012/UN  Ativos   \n",
-       "1  473135    BALAS GELAT FINI 80GR AROS DE MORANGO  CX/0012/UN  Ativos   \n",
-       "2  473125  BALAS GELAT FINI 80GR MINHOCAS CITRICAS  CX/0012/UN  Ativos   \n",
-       "3  473149            MARSHMALLOW FINI 80GR CAMPING  CX/0012/UN  Ativos   \n",
-       "4  473129  BALAS GELAT FINI 80GR BEIJOS DE MORANGO  CX/0012/UN  Ativos   \n",
+       "0  440218                ENERG EXTRA POWER PET 2LT  PT/0006/UN  Ativos   \n",
+       "1  466231      MARGARINA DELICIA 250G CREM 77% LIP  CX/0024/UN  Ativos   \n",
+       "2  470168  AZEITONA VDE FATIADA RAINHA BALDE 1,8KG  BD/0001/UN  Ativos   \n",
+       "3  473680               SACHET MAIONESE CEPERA 7GR  CX/0140/UN  Ativos   \n",
+       "4  466230      MARGARINA DELICIA 500G CREM 77% LIP  CX/0012/UN  Ativos   \n",
        "\n",
        "   QTUNITCX  QTTOTPAL  RUA  PREDIO  APTO           TIPO  ...  Estoque  \\\n",
-       "0         1       510   13      34   102  INTEIRO(1,90)  ...   1525.0   \n",
-       "1         1       364   13      30   101  INTEIRO(1,90)  ...   2354.0   \n",
-       "2         1       364   13      32   101  INTEIRO(1,90)  ...   2932.0   \n",
-       "3         1       126   13      36   102  INTEIRO(1,90)  ...   1140.0   \n",
-       "4         1       364   13      22   101  INTEIRO(1,90)  ...   4895.0   \n",
+       "0         1        80    8       5   101  INTEIRO(1,90)  ...      677   \n",
+       "1         1       112    3      20   101  INTEIRO(1,90)  ...     3450   \n",
+       "2         1       150    9      26   102  INTEIRO(1,90)  ...     3616   \n",
+       "3         1       560    6      95   102  INTEIRO(1,90)  ...     3031   \n",
+       "4         1       112    3       4   101  INTEIRO(1,90)  ...     8819   \n",
        "\n",
-       "   CUSTO_ULT    MOVI  CLASSE  PL_SUG  PL_CAP  CONTAGEM  STATUS_PROD  \\\n",
-       "0      42.11  1356.0       B    0.12    1.07         2          INT   \n",
-       "1      42.11  3810.0       A    0.43    1.07         2          INT   \n",
-       "2      42.11  3724.0       A    0.43    1.07         2          INT   \n",
-       "3      42.11  1226.0       B    0.40    1.11         2          INT   \n",
-       "4      42.11  6117.0       A    0.75    1.07         2          INT   \n",
+       "   CUSTO_ULT   MOVI  CLASSE  PL_SUG  PL_CAP  CONTAGEM  STATUS_PROD   CUSTO_TT  \\\n",
+       "0      51.41  32525       A    8.55    2.50         1          INT   34804.57   \n",
+       "1      72.44  24012       A    6.32    2.02         1          INT  249918.00   \n",
+       "2      37.06  18268       A    3.78    1.20         2          INT  134008.96   \n",
+       "3      15.79  17265       A    0.85    0.20         4          DIV   47859.49   \n",
+       "4      65.50  37643       A    9.11    6.00         1          INT  577644.50   \n",
        "\n",
-       "    CUSTO_TT  PRODUTO  \n",
-       "0   64217.75   473137  \n",
-       "1   99126.94   473135  \n",
-       "2  123466.52   473125  \n",
-       "3   48005.40   473149  \n",
-       "4  206128.45   473129  \n",
+       "   PRODUTO  \n",
+       "0   440218  \n",
+       "1   466231  \n",
+       "2   470168  \n",
+       "3   473680  \n",
+       "4   466230  \n",
        "\n",
        "[5 rows x 27 columns]"
       ]
@@ -368,9 +228,8 @@
     }
    ],
    "source": [
-    "display(df_final.columns)\n",
-    "display(df_final.dtypes)\n",
-    "display(df_final.head())"
+    "df = pd.read_excel(caminho)\n",
+    "display(df.head())"
    ]
   }
  ],
